--- a/app/src/main/res/layout/activity_classrooms_main.xml
+++ b/app/src/main/res/layout/activity_classrooms_main.xml
@@ -3,10 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingLeft="5dp"
+    android:paddingRight="5dp"
+    android:paddingTop="5dp"
+    android:paddingBottom="5dp"
+    android:background="#044cb1"
     tools:context="com.example.esra.myapplication.ClassroomsMainActivity">
 
 
@@ -14,9 +15,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/listView"
-        android:layout_alignParentTop="true"
+        android:background="#CEE3F6"
+        android:divider="#044cb1"
+        android:dividerHeight="2dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="75dp" />
+        android:layout_alignParentTop="true" />
 
 </RelativeLayout>
