--- a/app/src/main/res/layout/activity_showing_classrooms.xml
+++ b/app/src/main/res/layout/activity_showing_classrooms.xml
@@ -25,5 +25,6 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"/>
+        android:layout_height="fill_parent"
+        />
 </RelativeLayout>
